feat(api): Cluster delegated auth is working
