# libs/api/src/cluster/auth/login.rs
@@ -2,9 +2,10 @@ use actix_web::{get, web, HttpRequest, HttpResponse, Responder};
 use common::State;
 use crd::ProxyKubeApi;
 use deadpool_redis::redis::AsyncTypedCommands;
+use openidconnect::{core::CoreAuthenticationFlow, CsrfToken, Nonce, PkceCodeChallenge, Scope};
 use tracing::{error, info, instrument};
 
-use crate::model::user::User;
+use crate::{cluster::auth::auth_model::LoginToCallBackModel, model::user::User};
 
 /// Redirect to the cluster's login page
 ///
@@ -12,13 +13,17 @@ use crate::model::user::User;
 #[utoipa::path(
     tag = "auth_clusters",
     responses(
-        (status = 200, description = "Response from remote cluster"),
+        (status = 200, description = "Response from remote cluster", body = String),
         (status = 404, description = "Cluster not found or disabled."),
         (status = 500, description = "Internal server error."),
     ),
     security(
         ("oauth2" = [])
     ),
+    params(
+        ("ns", description = "Namespace"),
+        ("cluster", description = "Cluster name"),
+    )
 )]
 #[get("/{ns}/{cluster}/auth/login")]
 #[instrument(name = "cluster_login", skip(data))]
@@ -70,6 +75,49 @@ pub async fn cluster_login(req: HttpRequest, data: web::Data<State>, user: User)
         "User {:?} is logging in to cluster {:?}",
         user.username, oidc_conf.redirect_url
     );
-    // TODO : Finish implementing the login redirect
-    HttpResponse::Ok().body("TODO: implement login redirect")
+    let client = match oidc_conf.get_oidc_core().await {
+        Ok(client) => client,
+        Err(e) => {
+            error!(error = %e, " couldn't get oidc client");
+            return HttpResponse::InternalServerError().body(e.to_string());
+        }
+    };
+    let scopes: Vec<Scope> = oidc_conf
+        .scopes
+        .split(" ")
+        .map(|s| Scope::new(s.to_string()))
+        .collect();
+    let (pkce_challenge, pkce_verifier) = PkceCodeChallenge::new_random_sha256();
+    // TODO : Finish implementing the login redirect.
+    let (auth_url, csrf_token, nonce) = client
+        .authorize_url(
+            CoreAuthenticationFlow::AuthorizationCode,
+            CsrfToken::new_random,
+            Nonce::new_random,
+        )
+        .set_pkce_challenge(pkce_challenge)
+        .add_scopes(scopes)
+        .url();
+
+    // Store the csrf token and nonce in redis with a short TTL to validate later. TTL could be 5 minutes.
+    match conn
+        .set_ex::<String, String>(
+            format!("oidc_csrf_nonce:{}/{}/{}", ns, cluster, csrf_token.secret()),
+            LoginToCallBackModel::new(
+                nonce.secret().to_string(),
+                pkce_verifier.secret().to_string(),
+            )
+            .to_string(), // Replace with actual csrf and nonce values
+            300,
+        )
+        .await
+    {
+        Ok(_) => (),
+        Err(e) => {
+            error!(error = %e, " couldn't store csrf and nonce in redis");
+            return HttpResponse::InternalServerError().finish();
+        }
+    };
+
+    HttpResponse::Ok().body(auth_url.to_string())
 }
