# libs/api/src/cluster/auth/mod.rs
@@ -1,1 +1,4 @@
+pub mod auth_model;
+pub mod callback;
+pub mod callback_model;
 pub mod login;
